--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
 
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+    
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -48,6 +53,26 @@ h4 {
 
 .inline-block {
     display: inline-block;
+}
+
+
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+    
+}
+
+.row-table {
+    display: table;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /* ---------------------------------------------------- Heading*/
@@ -190,4 +215,15 @@ footer {
 
 .footer-details {
     padding: 20px;
+}
+
+/* ---------------------------------------------------- 3 Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22 ;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
